# gen/http/auth/server/paths.go
@@ -1,22 +1,0 @@
-// Code generated by goa v3.10.1, DO NOT EDIT.
-//
-// HTTP request path constructors for the auth service.
-//
-// Command:
-// $ goa gen backend/design
-
-package server
-
-import (
-	"fmt"
-)
-
-// LoginAuthPath returns the URL path to the auth service Login HTTP endpoint.
-func LoginAuthPath() string {
-	return "/login"
-}
-
-// SignupAuthPath returns the URL path to the auth service Signup HTTP endpoint.
-func SignupAuthPath(username string, password string) string {
-	return fmt.Sprintf("/signup/%v/%v", username, password)
-}
