# gen/http/login/server/encode_decode.go
@@ -1,0 +1,48 @@
+// Code generated by goa v3.10.1, DO NOT EDIT.
+//
+// login HTTP server encoders and decoders
+//
+// Command:
+// $ goa gen backend/design
+
+package server
+
+import (
+	login "backend/gen/login"
+	"context"
+	"net/http"
+
+	goahttp "goa.design/goa/v3/http"
+	goa "goa.design/goa/v3/pkg"
+)
+
+// EncodeLoginResponse returns an encoder for responses returned by the login
+// Login endpoint.
+func EncodeLoginResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
+	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
+		res, _ := v.(*login.LoginResult)
+		enc := encoder(ctx, w)
+		body := res.JWT
+		if res.AccessControlAllowOrigin != nil {
+			w.Header().Set("Access-Control-Allow-Origin", *res.AccessControlAllowOrigin)
+		}
+		w.WriteHeader(http.StatusOK)
+		return enc.Encode(body)
+	}
+}
+
+// DecodeLoginRequest returns a decoder for requests sent to the login Login
+// endpoint.
+func DecodeLoginRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
+	return func(r *http.Request) (interface{}, error) {
+		payload := NewLoginPayload()
+		user, pass, ok := r.BasicAuth()
+		if !ok {
+			return nil, goa.MissingFieldError("Authorization", "header")
+		}
+		payload.Username = user
+		payload.Password = pass
+
+		return payload, nil
+	}
+}
