# gen/http/login/server/paths.go
@@ -1,0 +1,13 @@
+// Code generated by goa v3.10.1, DO NOT EDIT.
+//
+// HTTP request path constructors for the login service.
+//
+// Command:
+// $ goa gen backend/design
+
+package server
+
+// LoginLoginPath returns the URL path to the login service Login HTTP endpoint.
+func LoginLoginPath() string {
+	return "/login"
+}
