# gen/http/signup/server/server.go
@@ -1,6 +1,6 @@
 // Code generated by goa v3.10.1, DO NOT EDIT.
 //
-// auth HTTP server
+// signup HTTP server
 //
 // Command:
 // $ goa gen backend/design
@@ -8,7 +8,7 @@
 package server
 
 import (
-	auth "backend/gen/auth"
+	signup "backend/gen/signup"
 	"context"
 	"net/http"
 
@@ -16,10 +16,9 @@ import (
 	goa "goa.design/goa/v3/pkg"
 )
 
-// Server lists the auth service endpoint HTTP handlers.
+// Server lists the signup service endpoint HTTP handlers.
 type Server struct {
 	Mounts []*MountPoint
-	Login  http.Handler
 	Signup http.Handler
 }
 
@@ -34,14 +33,14 @@ type MountPoint struct {
 	Pattern string
 }
 
-// New instantiates HTTP handlers for all the auth service endpoints using the
-// provided encoder and decoder. The handlers are mounted on the given mux
+// New instantiates HTTP handlers for all the signup service endpoints using
+// the provided encoder and decoder. The handlers are mounted on the given mux
 // using the HTTP verb and path defined in the design. errhandler is called
 // whenever a response fails to be encoded. formatter is used to format errors
 // returned by the service methods prior to encoding. Both errhandler and
 // formatter are optional and can be nil.
 func New(
-	e *auth.Endpoints,
+	e *signup.Endpoints,
 	mux goahttp.Muxer,
 	decoder func(*http.Request) goahttp.Decoder,
 	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
@@ -50,89 +49,34 @@ func New(
 ) *Server {
 	return &Server{
 		Mounts: []*MountPoint{
-			{"Login", "POST", "/login"},
-			{"Signup", "GET", "/signup/{username}/{password}"},
+			{"Signup", "GET", "/signup"},
 		},
-		Login:  NewLoginHandler(e.Login, mux, decoder, encoder, errhandler, formatter),
 		Signup: NewSignupHandler(e.Signup, mux, decoder, encoder, errhandler, formatter),
 	}
 }
 
 // Service returns the name of the service served.
-func (s *Server) Service() string { return "auth" }
+func (s *Server) Service() string { return "signup" }
 
 // Use wraps the server handlers with the given middleware.
 func (s *Server) Use(m func(http.Handler) http.Handler) {
-	s.Login = m(s.Login)
 	s.Signup = m(s.Signup)
 }
 
 // MethodNames returns the methods served.
-func (s *Server) MethodNames() []string { return auth.MethodNames[:] }
+func (s *Server) MethodNames() []string { return signup.MethodNames[:] }
 
-// Mount configures the mux to serve the auth endpoints.
+// Mount configures the mux to serve the signup endpoints.
 func Mount(mux goahttp.Muxer, h *Server) {
-	MountLoginHandler(mux, h.Login)
 	MountSignupHandler(mux, h.Signup)
 }
 
-// Mount configures the mux to serve the auth endpoints.
+// Mount configures the mux to serve the signup endpoints.
 func (s *Server) Mount(mux goahttp.Muxer) {
 	Mount(mux, s)
 }
 
-// MountLoginHandler configures the mux to serve the "auth" service "Login"
-// endpoint.
-func MountLoginHandler(mux goahttp.Muxer, h http.Handler) {
-	f, ok := h.(http.HandlerFunc)
-	if !ok {
-		f = func(w http.ResponseWriter, r *http.Request) {
-			h.ServeHTTP(w, r)
-		}
-	}
-	mux.Handle("POST", "/login", f)
-}
-
-// NewLoginHandler creates a HTTP handler which loads the HTTP request and
-// calls the "auth" service "Login" endpoint.
-func NewLoginHandler(
-	endpoint goa.Endpoint,
-	mux goahttp.Muxer,
-	decoder func(*http.Request) goahttp.Decoder,
-	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	errhandler func(context.Context, http.ResponseWriter, error),
-	formatter func(ctx context.Context, err error) goahttp.Statuser,
-) http.Handler {
-	var (
-		decodeRequest  = DecodeLoginRequest(mux, decoder)
-		encodeResponse = EncodeLoginResponse(encoder)
-		encodeError    = goahttp.ErrorEncoder(encoder, formatter)
-	)
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
-		ctx = context.WithValue(ctx, goa.MethodKey, "Login")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "auth")
-		payload, err := decodeRequest(r)
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil {
-				errhandler(ctx, w, err)
-			}
-			return
-		}
-		res, err := endpoint(ctx, payload)
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil {
-				errhandler(ctx, w, err)
-			}
-			return
-		}
-		if err := encodeResponse(ctx, w, res); err != nil {
-			errhandler(ctx, w, err)
-		}
-	})
-}
-
-// MountSignupHandler configures the mux to serve the "auth" service "Signup"
+// MountSignupHandler configures the mux to serve the "signup" service "Signup"
 // endpoint.
 func MountSignupHandler(mux goahttp.Muxer, h http.Handler) {
 	f, ok := h.(http.HandlerFunc)
@@ -141,11 +85,11 @@ func MountSignupHandler(mux goahttp.Muxer, h http.Handler) {
 			h.ServeHTTP(w, r)
 		}
 	}
-	mux.Handle("GET", "/signup/{username}/{password}", f)
+	mux.Handle("GET", "/signup", f)
 }
 
 // NewSignupHandler creates a HTTP handler which loads the HTTP request and
-// calls the "auth" service "Signup" endpoint.
+// calls the "signup" service "Signup" endpoint.
 func NewSignupHandler(
 	endpoint goa.Endpoint,
 	mux goahttp.Muxer,
@@ -162,7 +106,7 @@ func NewSignupHandler(
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
 		ctx = context.WithValue(ctx, goa.MethodKey, "Signup")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "auth")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "signup")
 		payload, err := decodeRequest(r)
 		if err != nil {
 			if err := encodeError(ctx, w, err); err != nil {
