# gen/login/endpoints.go
@@ -1,11 +1,11 @@
 // Code generated by goa v3.10.1, DO NOT EDIT.
 //
-// auth endpoints
+// login endpoints
 //
 // Command:
 // $ goa gen backend/design
 
-package auth
+package login
 
 import (
 	"context"
@@ -14,36 +14,33 @@ import (
 	"goa.design/goa/v3/security"
 )
 
-// Endpoints wraps the "auth" service endpoints.
+// Endpoints wraps the "login" service endpoints.
 type Endpoints struct {
-	Login  goa.Endpoint
-	Signup goa.Endpoint
+	Login goa.Endpoint
 }
 
-// NewEndpoints wraps the methods of the "auth" service with endpoints.
+// NewEndpoints wraps the methods of the "login" service with endpoints.
 func NewEndpoints(s Service) *Endpoints {
 	// Casting service to Auther interface
 	a := s.(Auther)
 	return &Endpoints{
-		Login:  NewLoginEndpoint(s, a.BasicAuth),
-		Signup: NewSignupEndpoint(s),
+		Login: NewLoginEndpoint(s, a.BasicAuth),
 	}
 }
 
-// Use applies the given middleware to all the "auth" service endpoints.
+// Use applies the given middleware to all the "login" service endpoints.
 func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
 	e.Login = m(e.Login)
-	e.Signup = m(e.Signup)
 }
 
 // NewLoginEndpoint returns an endpoint function that calls the method "Login"
-// of service "auth".
+// of service "login".
 func NewLoginEndpoint(s Service, authBasicFn security.AuthBasicFunc) goa.Endpoint {
 	return func(ctx context.Context, req interface{}) (interface{}, error) {
 		p := req.(*LoginPayload)
 		var err error
 		sc := security.BasicScheme{
-			Name:           "basic",
+			Name:           "login",
 			Scopes:         []string{},
 			RequiredScopes: []string{},
 		}
@@ -52,14 +49,5 @@ func NewLoginEndpoint(s Service, authBasicFn security.AuthBasicFunc) goa.Endpoin
 			return nil, err
 		}
 		return s.Login(ctx, p)
-	}
-}
-
-// NewSignupEndpoint returns an endpoint function that calls the method
-// "Signup" of service "auth".
-func NewSignupEndpoint(s Service) goa.Endpoint {
-	return func(ctx context.Context, req interface{}) (interface{}, error) {
-		p := req.(*SignupPayload)
-		return s.Signup(ctx, p)
 	}
 }
