# gen/signup/endpoints.go
@@ -1,0 +1,53 @@
+// Code generated by goa v3.10.1, DO NOT EDIT.
+//
+// signup endpoints
+//
+// Command:
+// $ goa gen backend/design
+
+package signup
+
+import (
+	"context"
+
+	goa "goa.design/goa/v3/pkg"
+	"goa.design/goa/v3/security"
+)
+
+// Endpoints wraps the "signup" service endpoints.
+type Endpoints struct {
+	Signup goa.Endpoint
+}
+
+// NewEndpoints wraps the methods of the "signup" service with endpoints.
+func NewEndpoints(s Service) *Endpoints {
+	// Casting service to Auther interface
+	a := s.(Auther)
+	return &Endpoints{
+		Signup: NewSignupEndpoint(s, a.BasicAuth),
+	}
+}
+
+// Use applies the given middleware to all the "signup" service endpoints.
+func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
+	e.Signup = m(e.Signup)
+}
+
+// NewSignupEndpoint returns an endpoint function that calls the method
+// "Signup" of service "signup".
+func NewSignupEndpoint(s Service, authBasicFn security.AuthBasicFunc) goa.Endpoint {
+	return func(ctx context.Context, req interface{}) (interface{}, error) {
+		p := req.(*SignupPayload)
+		var err error
+		sc := security.BasicScheme{
+			Name:           "signup",
+			Scopes:         []string{},
+			RequiredScopes: []string{},
+		}
+		ctx, err = authBasicFn(ctx, p.Username, p.Password, &sc)
+		if err != nil {
+			return nil, err
+		}
+		return s.Signup(ctx, p)
+	}
+}
